--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .hero { 
     padding-top: 64px;
     padding-bottom: 100px;
@@ -16,7 +18,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #000;
+        background-color: variables.$SecondaryTextColor;
         content: '';
         opacity: 0.7;
     }
@@ -46,7 +48,7 @@
         &__text { 
             font-size: 22px;
             line-height: 24px;
-            margin: 24px;
+            margin: 24px 0;
         }
     }
 }
