--- a/src/styles/components/_infos_bar.scss
+++ b/src/styles/components/_infos_bar.scss
@@ -1,55 +1,43 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EBAC TECH TALKS</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+@use '../variables';
 
-    <div class="header">
-        <h1>O maior evento de tecnologia do Brasil começa em</h1>
-        <div class="countdown">30d 17h 20min 56s</div>
-        <div class="event-info">
-            <p>Localização: Alfina Place - São Paulo</p>
-            <p>Preço: A partir de R$ 150,00</p>
-            <p>Quando: 10/10/2023</p>
-        </div>
-        <button class="cta-button">Reservar minha vaga</button>
-    </div>
+.infos-bar { 
+    padding: 16px 24px;
+    background-color: variables.$TextColor;
+    display: flex;
+    justify-content: space-between;
 
-    <div class="section">
-        <h2>Front-end</h2>
-        <div class="card">
-            <img src="frontend-image.png" alt="Imagem Front-end">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, nisi eget consectetur sagittis.</p>
-        </div>
-    </div>
+    &__infos { 
+        display: flex;
+        gap: 40px;
 
-    <div class="section">
-        <h2>Back-end</h2>
-        <div class="card">
-            <img src="backend-image.png" alt="Imagem Back-end">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum.</p>
-        </div>
-    </div>
+        &__item { 
+            font-size: 14px;
+            color: variables.$SecondaryTextColor;
+        }
 
-    <div class="section">
-        <h2>Front-end</h2>
-        <div class="card">
-            <img src="frontend-image.png" alt="Imagem Front-end">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum.</p>
-        </div>
-    </div>
+            b {
+                font-size: 18px;
+                display: block;
+                color: variables.$SecondaryTextColor;
+            }
+    }
 
-    <div class="section">
-        <h2>Back-end</h2>
-        <div class="card">
-            <img src="backend-image.png" alt="Imagem Back-end">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel sem eget risus dignissim.</p>
-        </div>
-    </div>
-    
-</body>
-</html>
+    @media (max-width: 640px) { 
+        display: block;
+
+        &__infos { 
+            display: block;
+
+            &__item { 
+                margin-bottom: 24px;
+            }
+        }
+    }
+
+    @media (max-width:1024px) { 
+        &__infos { 
+            gap: 16px;
+        }
+    }
+        
+}
